<resources>
    <string name="app_name">Ersthelfer Assistenz-APP</string>

    <string name="popup_title">Absichern und Eigenschutz beachten!</string>
    <string name="popup_safety_1">Sichern sie zuerst sich und ihre Umgebung</string>
    <string name="popup_safety_2">Tragen sie zur Behandlung Einmal-Handschuhe</string>
    <string name="popup_safety_3">Ruhe bewahren</string>
    <string name="popup_button">Ich bin ruhig - Los gehts!</string>



    <string name="notruf">NOTRUF</string>
    <string name="call">Call</string>
    <string name="denie">Leave</string>

    <string name="responseless_activity_header">Nicht erweckbar</string>
    <string name="breath_check_fragment_text">Keine Reaktion auf Ansprechen und leichtes Rütteln an den Schultern:</string>
    <string name="breath_check_stretch_text">Kopf überstrecken</string>
    <string name="breath_check_mouth_text">Falls nötigt Mundraum freiräumen:\nKinn nach unten und Wangenschleimhaut zwischen die Kiefer drücken, anschließend Fremdkörper entfernen</string>
    <string name="breath_check_check_text">Durch Hören und Fühlen Atmung prüfen</string>
    <string name="breath_check_active_text">Atmung\naktiv</string>
    <string name="breath_check_inactive_text">Atmung\ninaktiv</string>
    <string name="breath_active_fragment_text">Führen sie die Stabile Seitenlage durch:</string>
    <string name="breath_active_stable_side_position_1_text">Winkeln sie einen Arm an</string>
    <string name="breath_active_stable_side_position_2_text">Anderen Arm anwinkeln, sodass die Hand auf der Wange liegt</string>
    <string name="breath_active_stable_side_position_3_text">Bein derselben Seite anwinkeln und zu sich ziehen</string>
    <string name="breath_active_stable_side_position_4_text">Abschließend Kopf überstrecken und regelmäßig Atmung prüfen.</string>
    <string name="breath_inactive_emergency_hint">Rufen sie unbedingt den Notarzt</string>
    <string name="breath_inactive_fragment_text">Führen sie die Wiederbelebungsmaßnahmen durch.\nFalls möglich wechseln sie sich mit jemanden ab.\nFalls vorhanden nutzen sie einen Defibrillator.</string>
    <string name="breath_inactive_push_hint">30x drücken \n(Klicken um Counter + Ton zu starten)</string>
    <string name="breath_inactive_breath_hint">2x beatmen \nKopf überstrecken, Nase verschließen und Mund zu Mund beatmen.\n Wahlweise auch umgekehrt</string>

    <string name="injury_fragment_text">Informationen zum Thema Verletzungen:\nNicht in die Wunde fassen.\nNicht desinfizieren.\nGroße Fremdkörper nicht entfernen.</string>
    <string name="injury_title_1">Geringe Blutung</string>
    <string name="injury_title_1_content_text_1">Schützen sie die Wunde mit einem Pflaster.</string>
    <string name="injury_title_2">Starke Blutung</string>
    <string name="injury_title_2_content_text_1">Legen sie einen Rahmenverband an:\nBedecken sie die Wunde mit einer Kompresse.\nFixieren sie diese anschließend mit Heftpflastern oder einem Dreieckstuch.\n Falls verfügbar kann wahlweise auch ein Verbandpäckchen genutzt werden.</string>
    <string name="injury_title_2_content_text_2">Stoppen sie starke Blutungen mit einem Druckverband:\nWunde mit einer Kompresse bedecken.\nFlexibles Druckpolster (z.B. ungeöffnetes Verbandspäcken) anbringen.\nDruckpolster mit einem Verband oder Dreieckstuch fixieren.</string>
    <string name="injury_title_3">Fremdkörper fixieren</string>
    <string name="injury_title_3_content_text_1">Stabilisieren sie den Fremdkörper (z.B. mit ungeöffneten Verbandpäcken)\nUmwickeln sie diese anschließend mit Verband oder nutzen sie Heftpflaster zur Fixierung.</string>
    <string name="injury_title_4">Verbrennung/Verätzung/Erfrierung</string>
    <string name="injury_title_4_content_text_1">Verbrennung:\nKühlen sie kleine Flächen.\nBei großflächigen Verbrennungen bedecken sie die Wunde mit einem Verbandtuch.\nVerätzung:\nSpülen sie die Wunde mit Wasser aus.\nBedecken sie diese anschließend mit einem Verbandtuch.\nErfrierung:\nBringen sie den Betroffenen ins Warme und sorgen für trockene Kleidung.\nLeichte Erfrierungen mit Körperwärme aufwärmen.\nSchwere Erfrierungen mit Blasenbildung keim- und druckfrei bedecken.</string>
    <string name="injury_title_5">Brüche</string>
    <string name="injury_title_5_content_text_1">Verändern sie keine Fehlstellung und unterpolstern sie diese.\nWeder Zug noch Druck auf die betroffenen Gelenke ausüben.\nOffene Brüche mit einem Verbandtuch bedecken.\nRuhigstellung eines Armes:\n</string>
    <string name="injury_title_6">Abgetrennte Körperteile</string>
    <string name="injury_title_6_content_text_1">Blutstillung und Schocklage!\nAbgebrochene Zähne:\nZahn nicht an der Wurzel berühren und bei Verschmutzung abspülen.\nAnschließend keimarm, feucht und kühl sicherstellen.</string>

    <string name="head_fragment_text">Informationen zu Kopfschmerzen und -verletzungen:\nOberkörper hochlagern, um eine Druckbelastung des Gehirns durch erhöhte Blutzufuhr zu vermeiden.</string>
    <string name="head_title_1">Verletzung</string>
    <string name="head_title_1_content_text_1">Kopfverband anlegen:\nWunde abdecken.</string>
    <string name="head_title_1_content_text_2">Dreiecktuch über den Kopf des Betroffenen legen.</string>
    <string name="head_title_1_content_text_3">Die Enden des Tuches im Nacken überkreuzen und anschließend vor der Strin verknoten.</string>
    <string name="head_title_1_content_text_4">Abschließend Ende im Nacken einschlagen.</string>
    <string name="head_title_2">Schlaganfall</string>
    <string name="head_title_2_content_text_1">Symptome:\nKopfschmerzen\nSeh- und Sprachstörungen\nSchwindel- und Übelkeitsgefühle evtl. mit Erbrechen\nHalbseitige Lähmung (Gesicht, Arm)</string>
    <string name="head_title_2_content_text_2">Polstern und fixieren sie die gelähmten Körperteile.\nRufen sie umgehend einen Notarzt.</string>
    <string name="head_title_3">Sonnenstich/Hitzschlag</string>
    <string name="head_title_3_content_text_1">Symptome:\nKopf-/Nackenschmerzen\nSchwindel/Übelkeit/Erbrechen\nIst nicht nur der Kopf, sondern der gesamte Körper rot, handelt es sich um einen Hitzschlag</string>
    <string name="head_title_3_content_text_2">Behandlung:\nDer Betroffene muss umgehend in den Schatten gebracht werden.\nKühlen sie den Kopf, handelt es sich um einen Hitzschlag, beginnen sie mit dem Kühlen an Händen und Füßen und arbeiten sich zum Körperkern vor.</string>

    <string name="chest_fragment_text">Informationen zu Brustschmerzen und -verletzungen:\nLagern sie wenn nicht anders gewünscht den Oberkörper hoch.\nEntfernen sie falls notwendig beengende Kleidung.\nFühren sie frische Luft zu.</string>
    <string name="chest_title_1">Schmerzen in der Brust</string>
    <string name="chest_title_1_content_text_1">Berichtet der Betroffene von Schmerzen hinter dem Brustbein, die bis in den linken Arm, Hals, Bauch oder Rücken strahlen und der nach einiger Schonzeit nicht abklingt, könnte es sich um einen Herzinfarkt handeln.\n Rufen sie einen Notarzt und behalten sie den Betroffenen im Auge. </string>
    <string name="chest_title_2">Atmungsprobleme</string>
    <string name="chest_title_2_content_text_1">Hyperventilation:\nSchnelle Atmung des Betroffenen bei gleichzeitigem Beklagen über Luftnot.\nLassen sie den Betroffenen falls möglich in eine leere Tüte atmen.</string>
    <string name="chest_title_2_content_text_2">Asthma:\nDer Betroffene atmet röchelnd/rasselnd/pfeifend.\nFalls vorhanden reichen sie ihm sein Spray.\nFordern sie den Betroffenen zur Flötenatmung auf (Lippen beim Ausatmen spitzen).</string>
    <string name="chest_title_3">Insektenstiche im Mund-Rachen-Raum</string>
    <string name="chest_title_3_content_text_1">Kühlen sie wenn möglich von innen und außen.\nGeben sie dem Betroffenen ein Eis oder kaltes Wasser zum gurgeln.\nNutzen sie Kühlkompressen um von außen zu kühlen</string>
    <string name="chest_title_4">Fremdkörper</string>
    <string name="chest_title_4_content_text_1">Fordern sie den Betroffenen zum Husten auf.\nSchlagen sie bei Misserfolg 5x zwischen die Schulterblätter.\nZuletzt: Heimlich-Handgriff.</string>


    <string name="stomach_fragment_text">Informationen zu Bauchschmerzen und -verletzungen:\nLagerung des Betroffenen auf den Rücken mit Knie- und Nackenrolle oder nach Wunsch.\nLeisten sie falls nötig Hilfestellung beim Erbrechen.\nBei offenen Verletzungen am besten mit dem Verbandtuch arbeiten</string>
    <string name="stomach_title_1">Diabetes</string>
    <string name="stomach_title_1_content_text_1">Ist der Betroffene insulinpflichtiger Diabetiger:\nFühren sie Traubenzucker zu, sollten folgende Symptome auftreten:\nHeißhunger\nSchweißausbrüche\nSchwindel\nÜbelkeit\nVerhaltensänderungen\nBewusstseinsstörungen</string>
    <string name="stomach_title_2">Vergiftung</string>
    <string name="stomach_title_2_content_text_1">Giftreste sicher stellen und Rettungsdienst übergeben.\nGegebenenfalls Giftinformationszentrale anrufen.\nRegelmäßige Kontrolle des Zustands des Patienten.</string>

    <string name="overview_activity_header">Leitsymptome</string>


</resources>
