<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/injury_fragment_text"
        android:id="@+id/injury" />

    <TextView
        android:id="@+id/injury_title_1"
        style="@style/ListContents"
        android:tag="injury1"
        android:text="@string/injury_title_1"
        android:onClick="expandTitle"/>

    <TextView
        android:id="@+id/injury_title_1_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Pflaster glangt!"
        />

    <TextView
        android:id="@+id/injury_title_2"
        style="@style/ListContents"
        android:tag="injury2"
        android:text="@string/injury_title_2"
        android:onClick="expandTitle"/>

    <TextView
        android:id="@+id/injury_title_2_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Pflaster glangt!"
        />

    <TextView
        android:id="@+id/injury_title_3"
        style="@style/ListContents"
        android:tag="injury3"
        android:text="@string/injury_title_3"
        android:onClick="expandTitle"/>

    <TextView
        android:id="@+id/injury_title_3_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Pflaster glangt!"
        />

    <TextView
        android:id="@+id/injury_title_4"
        style="@style/ListContents"
        android:tag="injury4"
        android:text="@string/injury_title_4"
        android:onClick="expandTitle"/>

    <TextView
        android:id="@+id/injury_title_4_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Pflaster glangt!"
        />

    <TextView
        android:id="@+id/injury_title_5"
        style="@style/ListContents"
        android:tag="injury5"
        android:text="@string/injury_title_5"
        android:onClick="expandTitle"/>

    <TextView
        android:id="@+id/injury_title_5_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Pflaster glangt!"
        />

    <TextView
        android:id="@+id/injury_title_6"
        style="@style/ListContents"
        android:tag="injury6"
        android:text="@string/injury_title_6"
        android:onClick="expandTitle"/>

    <TextView
        android:id="@+id/injury_title_6_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Pflaster glangt!"
        />


</LinearLayout>
