<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/head_fragment_text"
        android:id="@+id/head" />

    <TextView
        android:id="@+id/head_title_1"
        style="@style/ListContents"

        android:text="@string/head_title_1"
        android:onClick="expandTitle1"/>

    <TextView
        android:id="@+id/head_title_1_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Pflaster glangt!"
        />

    <TextView
        android:id="@+id/head_title_2"
        style="@style/ListContents"

        android:text="@string/injury_title_2"
        android:onClick="expandTitle2"/>

    <TextView
        android:id="@+id/head_title_2_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Pflaster glangt!"
        />

    <TextView
        android:id="@+id/head_title_3"
        style="@style/ListContents"

        android:text="@string/head_title_3"
        android:onClick="expandTitle3"/>

    <TextView
        android:id="@+id/head_title_3_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Pflaster glangt!"
        />
</LinearLayout>
